[package]
name = "lum_boxtypes"
version = "0.2.1"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "lum framework's box types library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_boxtypes"
license = "MIT"
keywords = ["lum", "framework", "types", "box", "pin"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]